# wartime_penguins

./: .gitmodules  Cargo.toml  README.md
src/: main.rs
wartime_penguins/: Cargo.toml  Dockerfile  startup.sh
wartime_penguins/contracts/src/: MyContract.sol
wartime_penguins/frontend/: package-lock.json  package.json  proxy-server.js
wartime_penguins/frontend/public/: index.html
wartime_penguins/frontend/src/: App.js  index.css
wartime_penguins/src/: main.rs
