[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
image = "0.24"
rand = "0.8"
rand_chacha = "0.3"
gif = "0.12"
ipfs-api-backend-hyper = { version = "0.6", features = ["with-builder"] }
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde_json = "1.0"
ethabi = "18.0"
ciborium = "0.2"
cid = "0.10"
multihash = "0.18"
